--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +19,7 @@ body {
 
 .container-form {
     width: 90%;
-    height: 90vh;
+    height: 80vh;
     display: flex;
     justify-content: space-around;
     transition:  all .5s ease-out;
@@ -60,13 +60,13 @@ body {
 
 .formulario {
     width: 400px;
+    height: 90vh;
     padding: 1rem;
     margin: 2rem;
     background-color: rgb(51, 51, 51, 0.602);
     text-align: center;
     box-shadow: 7px 13px 37px #000;
 }
-
 .create-account {
     padding: 1.5rem 0;
     font-size: 1.7rem;
@@ -191,9 +191,28 @@ body {
     padding: 2rem 0;
 }
 
-.pais{
+.selectBox{
     background-color: rgb(51, 51, 51, 0.602);
     color: white;
+    display: flex;
+    width: 100%;
+    align-items:flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+}
+.selectBox select{
+align-self: flex-start;
+align-content: flex-start;
+width: 100%;
+border-color: #000;
 }
 
+article>img{
+    float:right;
+}
+
+.catalogo img {
+        width: 30px;
+        height: 30px;
+}
 
